services/auth/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth
  namespace: tetral-system
  labels:
    app.kubernetes.io/name: auth
    app.kubernetes.io/component: auth
    app.kubernetes.io/part-of: tetral
    app.kubernetes.io/managed-by: kustomize
    tetral.ai/exposure: public
spec:
  sessionAffinity: None
  type: ClusterIP
  selector:
    app.kubernetes.io/name: auth
  ports:
    - name: grpc-check
      port: 9095
      targetPort: grpc-check
      appProtocol: kubernetes.io/h2c
    - name: http
      port: 8080
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: auth-metrics
  namespace: tetral-system
  labels:
    app.kubernetes.io/name: auth
    app.kubernetes.io/component: auth
    app.kubernetes.io/part-of: tetral
    app.kubernetes.io/managed-by: kustomize
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: auth
  ports:
    - name: metrics
      port: 8081
      targetPort: metrics
